--- a/11-loops-and-strings/index.html
+++ b/11-loops-and-strings/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <script src="second.js"></script>
+    <script src="Counting-Iterative-for-loops.js"></script>
 </body>
 </html>
