--- a/11-loops-and-strings/index.html
+++ b/11-loops-and-strings/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
-    <script src="Counting-Iterative-for-loops.js"></script>
+    <!-- <script src="script.js"></script>
+    <script src="Counting-Iterative-for-loops.js"></script> -->
+    <script src="index.js"></script>
 </body>
 </html>
