--- a/17-practice-question/index.html
+++ b/17-practice-question/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="script.js"></script>
-    <script src="question-2.js"></script> -->
+    <h1>pracrice Question </h1>
+    <script src="script.js"></script>
+    <script src="question-2.js"></script>
     <script src="question-3.js"></script>
 </body>
 </html>
